<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rightColor="@color/textGrayMiddle"
        app:rightSize="@dimen/dp_16"
        app:rightTitle="@string/add_image"
        app:title="@string/picture_video"
        app:titleColor="#000"
        app:titleSize="@dimen/dp_18" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_gravity="top"
        android:layout_weight="1" />

    <com.futureeducation.commonmodule.view.CommonShapeButton
        android:id="@+id/transform"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/transform"
        android:textColor="@color/textGrayDeep"
        android:textSize="@dimen/dp_16"
        app:csb_activeEnable="true"
        app:csb_cornerRadius="@dimen/dp_5"
        app:csb_fillColor="@color/white"
        app:csb_pressedColor="@color/text_gray" />

</LinearLayout>