<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/budil_qrcode"
        app:titleColor="#000"
        app:titleSize="@dimen/dp_18" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/qrcode_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/qrcode_hint"
        android:paddingLeft="@dimen/dp_20"
        android:paddingRight="@dimen/dp_20"
        android:textColor="@color/textGrayDeep"
        android:textColorHint="@color/textGrayLight"
        android:textSize="@dimen/dp_16" />

    <com.futureeducation.commonmodule.view.CommonShapeButton
        android:id="@+id/budil"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_15"
        android:layout_marginRight="@dimen/dp_15"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_weight="0"
        android:text="@string/budil"
        android:textColor="@color/textGrayDeep"
        android:textSize="@dimen/dp_16"
        app:csb_activeEnable="true"
        app:csb_cornerRadius="@dimen/dp_5"
        app:csb_fillColor="@color/white"
        app:csb_strokeColor="@color/line1"
        app:csb_strokeWidth="@dimen/dp_1" />
</LinearLayout>