<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f5"
    android:orientation="vertical">


    <com.hjq.bar.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/QRcode"
        app:titleColor="#000"
        app:titleSize="@dimen/dp_18" />

    <com.futureeducation.commonmodule.view.CommonShapeButton
        android:id="@+id/scan"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/scan_qrcode"
        android:textColor="@color/textGrayMiddle"
        android:textSize="@dimen/dp_16"
        app:csb_activeEnable="true"
        app:csb_fillColor="@color/white"
        app:csb_pressedColor="@color/green_ripple"
        app:csb_strokeColor="@color/text_gray"
        app:csb_strokeWidth="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.futureeducation.commonmodule.view.CommonShapeButton
        android:id="@+id/budilqrcode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/budilqrcode"
        android:textColor="@color/textGrayMiddle"
        android:textSize="@dimen/dp_16"
        app:csb_activeEnable="true"
        app:csb_fillColor="@color/white"
        app:csb_pressedColor="@color/green_ripple"
        app:csb_strokeColor="@color/text_gray"
        app:csb_strokeWidth="@dimen/dp_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scanresult"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:includeFontPadding="false"
        android:textColor="@color/textGrayDeep"
        android:textSize="@dimen/dp_16" />

    <ImageView
        android:id="@+id/qrcode_iamge"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_gravity="center"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100" />

</LinearLayout>